--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@susemaa/test_component_library": "^0.0.3",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@susemaa/test_component_library": "^1.0.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,9 +12,13 @@
     "@types/node": "^16.18.61",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-responsive-masonry": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "react-responsive-masonry": "^2.1.7",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.3.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -22,7 +27,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "npx eslint --ext js,jsx,ts,tsx --no-eslintrc --config .eslintrc.js ."
+    "lint": "npx eslint --ext js,jsx,ts,tsx --no-eslintrc --config .eslintrc.js .",
+    "tailwind": "npx tailwindcss -i ./src/index.css -o ./public/index.css "
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.15",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2"
